--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,8 +10,9 @@ html,
 body {
     margin: 0;
     padding: 0;
-    // position: fixed;
+    position: relative;
     height: 1px;
+    // width: 100%;
     background-color: #f2f2f2;
 }
 
