--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -14,7 +14,7 @@
 
 .welcome-page{
         background-color: white;
-
+    height: 100rem;
 }
 
 .main-logo {
